design + component updates

--- a/src/content/magic-docs/changelog.mdx
+++ b/src/content/magic-docs/changelog.mdx
@@ -35,7 +35,7 @@ Keep your customers informed with the latest updates and changes to your product
             "Advanced SEO through a simplified metadata + schema system"
           ],
           // optional link
-          link: "https://once-ui.com/templates/magic-docs"
+          link: "https://once-ui.com/products/magic-docs"
         }
       ]
     },
