--- a/src/content/once-ui/components/accordionGroup.mdx
+++ b/src/content/once-ui/components/accordionGroup.mdx
@@ -1,11 +1,91 @@
 ---
 title: "AccordionGroup"
-summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
+summary: "The AccordionGroup component provides a container for multiple Accordion components with consistent styling and spacing."
 updatedAt: "2025-05-04"
 navLabel: "AccordionGroup"
 navIcon: "learn"
 ---
 
-## Title
+A container component that groups multiple Accordion components together with consistent styling and dividers between each item. It's useful for creating FAQ sections, navigation menus, and other grouped collapsible content.
 
-Content
+<CodeBlock
+  marginTop="8"
+  marginBottom="16"
+  codePreview={
+    <AccordionGroup
+      items={[
+        {
+          title: "First item",
+          content: <Text onBackground="neutral-weak">Content for the first item</Text>
+        },
+        {
+          title: "Second item",
+          content: <Text onBackground="neutral-weak">Content for the second item</Text>
+        },
+        {
+          title: "Third item",
+          content: <Text onBackground="neutral-weak">Content for the third item</Text>
+        }
+      ]}
+    />
+  }
+  codeInstances={[
+    {
+      code:
+`<AccordionGroup
+    items={[
+      {
+        title: "First Item",
+        content: <Text onBackground="neutral-weak">Content for the first item</Text>
+      },
+      {
+        title: "Second Item",
+        content: <Text onBackground="neutral-weak">Content for the second item</Text>
+      },
+      {
+        title: "Third Item",
+        content: <Text onBackground="neutral-weak">Content for the third item</Text>
+      }
+    ]}
+/>`,
+      language: "tsx",
+      label: "AccordionGroup"
+    }
+  ]}
+/>
+
+## API reference
+
+<Table
+  marginTop="8"
+  marginBottom="16"
+  data={{
+    headers: [
+      { content: "Prop", key: "prop", sortable: true },
+      { content: "Type", key: "type" },
+      { content: "Default", key: "default" },
+    ],
+    rows: [
+      ["items", <InlineCode>AccordionItem[]</InlineCode>, "-"],
+      ["size", <InlineCode>"s" | "m" | "l"</InlineCode>, <InlineCode>"m"</InlineCode>]
+    ]
+  }}
+/>
+
+## AccordionItem
+
+<Table
+  marginTop="8"
+  marginBottom="16"
+  data={{
+    headers: [
+      { content: "Property", key: "property", sortable: true },
+      { content: "Type", key: "type" },
+      { content: "Description", key: "description" }
+    ],
+    rows: [
+      ["title", <InlineCode>ReactNode</InlineCode>, "The title or header content of the accordion item"],
+      ["content", <InlineCode>ReactNode</InlineCode>, "The content to be displayed when the accordion item is expanded"]
+    ]
+  }}
+/>
