--- a/src/content/once-ui/components/arrow.mdx
+++ b/src/content/once-ui/components/arrow.mdx
@@ -12,7 +12,7 @@ A decorative arrow component that animates when a specified trigger element is h
   marginTop="8"
   marginBottom="16"
   codePreview={
-    <Column gap="16">
+    <Column gap="16" horizontal="center">
       <Row id="arrow-trigger-1" padding="16" fitWidth radius="m" vertical="center" variant="primary">
         Simple usage
         <Arrow trigger="#arrow-trigger-1" scale={1} />
